Fixed invisible text in search field.

--- a/assets/styles/colors--light.css
+++ b/assets/styles/colors--light.css
@@ -16,6 +16,7 @@
 .search__input,
 .button--secondary {
     background-color: white;
+    color:            var(--color__gray--dark);
 }
 .button--secondary[disabled] {
     background-color: #ccc;
